fix overflow

--- a/src/components/table/table-column-resize/resizable-table-column.component.less
+++ b/src/components/table/table-column-resize/resizable-table-column.component.less
@@ -20,6 +20,12 @@
     }
 }
 
+.ux-resizable-table-column-content {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 .ux-resizable-table-column-handle {
     content: '';
     position: absolute;
